[package]
name        = "voxidian-editor"
version     = "0.1.0"
authors     = ["LighthouseMC <https://github.com/LighthouseMC>"]
description = "A simple web-based code editor for the Lighthouse Minecraft server (server)."
license     = "LGPL-3.0"

homepage   = "https://github.com/LighthouseMC"
repository = "https://github.com/LighthouseMC/VoxidianEditor"

edition = "2024"

[workspace]
members = [
    "voxidian-editor-common",
    "voxidian-editor-frontend"
]

[lints.rust]
unused_parens = "allow"


[dependencies.voxidian-editor-common]
path = "./voxidian-editor-common"
[dependencies.voxidian-logger]
path = "../voxidian-logger"
[dependencies.voxidian-database]
path = "../voxidian-database"

[dependencies.tide]
version = "0.16"
[dependencies.tide-websockets]
version = "0.4"

[dependencies.async-std]
version = "1.13"
[dependencies.futures]
version = "0.3"

[dependencies.const_format]
version = "0.2"

[dependencies.openssl]
version = "0.10"

[dependencies.uuid]
version  = "1.11"
features = [ "v4" ]


[build-dependencies.walkdir]
version = "2.5"
