[package]
name        = "voxidian-editor"
version     = "0.1.0"
authors     = ["LighthouseMC <https://github.com/LighthouseMC>"]
description = "A simple web-based code editor for the Lighthouse Minecraft server (server)."
license     = "LGPL-3.0"

homepage   = "https://github.com/LighthouseMC"
repository = "https://github.com/LighthouseMC/VoxidianEditor"

edition = "2024"

[workspace]
members = [
    "voxidian-editor-common",
    "voxidian-editor-frontend"
]

[lints.rust]
unused_parens = "allow"


[dependencies.voxidian-editor-common]
path = "./voxidian-editor-common"
[dependencies.voxidian-logger]
path = "../voxidian-logger"
[dependencies.voxidian-database]
path = "../voxidian-database"

[dependencies.axecs]
path = "../../ecs/axecs"

[dependencies.axum]
version  = "0.8.1"
features = [ "ws", "tokio" ]
[dependencies.tokio]
version  = "1.43"
features = [ "full" ]

[dependencies.const_format]
version = "0.2"

[dependencies.openssl]
version = "0.10"

[dependencies.uuid]
version  = "1.11"
features = [ "v4" ]
