[package]
name        = "lighthousemc-editor"
version     = "0.1.0"
authors     = ["LighthouseMC <https://github.com/LighthouseMC>"]
description = "A simple web-based code editor for the Lighthouse Minecraft server (server)."
license     = "LGPL-3.0"

homepage   = "https://github.com/LighthouseMC"
repository = "https://github.com/LighthouseMC/lighthousemc-editor"

edition = "2024"

[workspace]
members = [
    "lighthousemc-editor-common",
    "lighthousemc-editor-frontend"
]

[lints.rust]
unused_parens = "allow"


[dependencies.lighthousemc-editor-common]
path = "./lighthousemc-editor-common"
[dependencies.lighthousemc-database]
path = "../lighthousemc-database"
[dependencies.voxidian-logger]
path = "../voxidian-logger"

[dependencies.axecs]
path = "../../ecs/axecs"

[dependencies.axum]
version  = "0.8.1"
features = [ "ws", "tokio" ]
[dependencies.tokio]
version  = "1.43"
features = [ "full" ]

[dependencies.const_format]
version = "0.2"

[dependencies.openssl]
version = "0.10"

[dependencies.uuid]
version  = "1.11"
features = [ "v4" ]
