[package]
name        = "lighthousemc-editor-common"
version     = "0.1.0"
authors     = ["LighthouseMC <https://github.com/LighthouseMC>"]
description = "A simple web-based code editor for the Lighthouse Minecraft server (common)."
license     = "LGPL-3.0"

homepage   = "https://github.com/LighthouseMC"
repository = "https://github.com/LighthouseMC/lighthousemc-editor"

edition = "2024"

workspace = ".."

[lints.rust]
unused_parens = "allow"


[dependencies.uuid]
version = "1.11"

[dependencies.diff-match-patch-rs]
version = "0.3"
