[package]
name        = "voxidian-editor-frontend"
version     = "0.1.0"
authors     = ["LighthouseMC <https://github.com/LighthouseMC>"]
description = "Simple web-based code editor (frontend)."
license     = "LGPL-3.0"

homepage   = "https://github.com/LighthouseMC"
repository = "https://github.com/LighthouseMC/VoxidianEditor"

edition = "2024"

[lints.rust]
unused_parens = "allow"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits  = "release"
opt-level = "s"
strip     = "debuginfo"


[dependencies.bevy]
version = "0.15"

